# mxmon

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  bacon.toml  context7.json  dist-workspace.toml  release-plz.toml
.claude-plugin/: marketplace.json
.config/: nextest.toml
.github/workflows/: ci.yml  context7-refresh.yml  release-plz.yml  release.yml
proptest-regressions/collect/: power.txt
proptest-regressions/ui/: motion.txt
skills/mxmon/: SKILL.md
src/: app.rs  arrange.rs  config.rs  event.rs  history.rs  keys.rs  main.rs  render_fuzz.rs  settings.rs  tests.rs  testutil.rs  trace.rs  units.rs
src/cli/: args.rs  collect.rs  commands.rs  control.rs  debug.rs  flatten.rs  help.golden.txt  mod.rs  output.rs  render.rs  watch.rs
src/collect/: battery.rs  cpu.rs  disk.rs  flows.rs  gpu.rs  kernel.rs  mem.rs  mod.rs  net.rs  ping.rs  power.rs  procs.rs  sampler.rs  selfcpu.rs  soc.rs  storage.rs  temps.rs
src/ffi/: cf.rs  hid.rs  icmp.rs  iokit.rs  iopm.rs  ioreport.rs  mach.rs  mod.rs  net.rs  notify.rs  ntstat.rs  nvme.rs  proc.rs  smc.rs  sys.rs
src/report/: build.rs  check.rs  explain.rs  health.rs  mod.rs  model.rs  norm.rs  schema.golden.json  schema.rs  select.rs
src/ui/: glyphs.rs  layout.rs  mod.rs  motion.rs  overlays.rs  schematic.rs  settings.rs  theme.rs  thermal.rs  widgets.rs
src/ui/panels/: battery.rs  cpu.rs  disk.rs  flows.rs  gpu.rs  header.rs  mem.rs  mod.rs  net.rs  power.rs  procs.rs  temps.rs
src/ui/snapshots/: connections_160x45.snap  connections_80x24.snap  inspect_battery_120x36.snap  inspect_kernel_120x36.snap  inspect_storage_120x36.snap  modal_details_120x36.snap  modal_help_120x36.snap  modal_kill_120x36.snap  modal_settings_120x36.snap  modal_sort_120x36.snap  overview_160x45.snap  overview_320x60.snap  overview_80x24.snap  overview_arranged_160x45.snap  overview_arranging_160x45.snap  overview_hidden_panels_160x45.snap  overview_hover_cpu_160x45.snap  overview_hover_net_160x45.snap  overview_no_panels_160x45.snap  overview_octants_160x45.snap  overview_x1_160x45.snap  overview_zoom8_160x45.snap  processes_160x45.snap  processes_80x24.snap  settings_about_120x36.snap  settings_appearance_120x36.snap  settings_appearance_80x24.snap  settings_capture_120x36.snap  settings_editing_120x36.snap  settings_graphs_120x36.snap  settings_keys_120x36.snap  settings_layout_120x36.snap  settings_network_120x36.snap  settings_panels_120x36.snap  settings_sampling_120x36.snap  thermal_160x45.snap  thermal_80x24.snap
tests/: cli.rs  tui_pty.rs
tests/common/: mod.rs
